[gd_scene load_steps=3 format=3 uid="uid://bb6qfbo0c38u0"]

[ext_resource type="Script" uid="uid://bp8xy3qayce6m" path="res://Scripts/inventory.gd" id="1_k5gp2"]
[ext_resource type="Texture2D" uid="uid://b7kpoejt02arh" path="res://Assets/Arts/coffe_mug.png" id="1_wdn4f"]

[node name="Inventory" type="VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1
script = ExtResource("1_k5gp2")

[node name="Slot1" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("1_wdn4f")
stretch_mode = 5

[node name="Slot2" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("1_wdn4f")
stretch_mode = 5

[node name="Slot3" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("1_wdn4f")
stretch_mode = 5

[connection signal="pressed" from="Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="Slot3" to="." method="_on_slot_3_pressed"]
